k8s/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mcu-all
  namespace: delenikov
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /
