k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: delenikov
spec:
  replicas: 1
  selector:
    matchLabels:
      env: backend-app
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        env: backend-app
    spec:
      containers:
        - name: backend-ctr
          image: delenikov/devops-project-backend:kubernetes
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: delenikov
spec:
  selector:
    env: backend-app
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
