k8s/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sts
  namespace: delenikov
spec:
  replicas: 3
  selector:
    matchLabels:
      env: postgres
  serviceName: postgres-service
  template:
    metadata:
      labels:
        env: postgres
    spec:
      containers:
        - name: postgres-ctr
          image: postgres:15.3-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
        namespace: delenikov
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: delenikov
spec:
  selector:
    env: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
