k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: delenikov
spec:
  replicas: 3
  selector:
    matchLabels:
      env: frontend-app
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        env: frontend-app
    spec:
      containers:
        - name: frontend-ctr
          image: delenikov/devops-project-frontend:kubernetes
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: delenikov
spec:
  selector:
    env: frontend-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
