k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcu-all
  namespace: delenikov
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    traefik.ingress.kubernetes.io/router.middlewares: default-mcu-all@kubernetescrd
spec:
  rules:
  - host: ver1.191232.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8081
